# Graphics_Demo

./: CMakeLists.txt  README.md  main.cpp
OpenCV3/: setup_vars_opencv3.cmd
OpenCV3/x64/vc17/lib/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules.cmake  opencv_calib3d3416d.lib  opencv_core3416d.lib  opencv_dnn3416d.lib  opencv_features2d3416d.lib  opencv_flann3416d.lib  opencv_highgui3416d.lib  opencv_imgcodecs3416d.lib  opencv_imgproc3416d.lib  opencv_ml3416d.lib  opencv_objdetect3416d.lib  opencv_photo3416d.lib  opencv_shape3416d.lib  opencv_stitching3416d.lib  opencv_superres3416d.lib  opencv_video3416d.lib  opencv_videoio3416d.lib  opencv_videostab3416d.lib
include/: AllClass.h  Triangle.hpp  global.hpp  rasterizer.hpp
src/: AllClass.cpp  Triangle.cpp  rasterizer.cpp
